--- a/exercicios/ex022/index.html
+++ b/exercicios/ex022/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1><a href="fundo001.html">Acesse o primeiro exemplo de fundo de imagem</a></h1>
+
+    <h1><a href="fundo002.html">Acesse o segundo de fundo de imagem</a></h1>
+
+    <h1><a href="fundo003.html">Acesse o terceiro exemplo de fundo de imagem</a></h1>
+
+    <h1><a href="fundo004.html">Acesse o quarto exemplo de fundo de imagem</a></h1>
 </body>
 </html>
