--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -8,15 +8,13 @@
     <style>
         body{
             height: 97vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover
+            background: black url(imagens/wallpaper002.jpg) no-repeat fixed center center;
+            background-size: cover;
+            font-family: Arial, Helvetica, sans-serif;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 800px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -31,9 +29,26 @@
         </h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex saepe eaque minus non? Excepturi ducimus minima, assumenda distinctio aut, impedit, saepe commodi voluptates doloribus sequi vel odio reprehenderit facere maxime.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, doloremque amet. Quo alias quod a at rem dignissimos? Voluptate commodi perferendis autem assumenda aspernatur, temporibus saepe quae vel? Molestiae, harum!
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut modi non quo esse autem neque optio nobis fugiat quisquam. Nobis modi voluptatum excepturi sed temporibus assumenda corporis aliquid saepe minima?
         </p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, doloremque amet. Quo alias quod a at rem dignissimos? Voluptate commodi perferendis autem assumenda aspernatur, temporibus saepe quae vel? Molestiae, harum!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut modi non quo esse autem neque optio nobis fugiat quisquam. Nobis modi voluptatum excepturi sed temporibus assumenda corporis aliquid saepe minima?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque laudantium corporis illum optio aliquam nemo ipsam odio saepe et nam non nobis repellendus, consequuntur nesciunt corrupti vitae aspernatur eligendi perspiciatis.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident laboriosam cum voluptas adipisci itaque nobis, qui reprehenderit molestias, deleniti magnam dicta vero saepe. Incidunt doloremque, ut laboriosam enim praesentium voluptates?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus veniam corrupti autem sed dolorem earum dolore beatae rerum esse quae quam ipsam quaerat cupiditate sequi, cum ad reprehenderit cumque voluptas!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni, tempora at labore dolorem veniam eius! Enim obcaecati modi distinctio perferendis nemo corporis ratione facere ullam ex? Beatae, earum voluptatum!</p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, odio delectus? Officiis, amet assumenda debitis voluptatibus explicabo rem fugiat obcaecati. Dicta exercitationem non totam earum accusantium dolorum porro iusto rem!
+            </p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil similique voluptatibus, perferendis voluptatem nam totam dolores ipsa, amet laborum cumque qui, porro dolore. Dignissimos odit temporibus nulla a cupiditate libero.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos harum laboriosam consequatur rerum error, veniam architecto doloremque magni voluptatum impedit aut aspernatur saepe molestias assumenda repudiandae dolorem odit dolor laudantium.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam consequuntur numquam officia, libero itaque dolorem facilis quia saepe iusto ipsam, beatae officiis ipsum cumque laudantium nulla! Iure dignissimos quibusdam placeat.
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas rem vel commodi id aliquam dicta sequi aperiam ullam doloribus nemo, officiis incidunt laboriosam culpa esse voluptatibus ab quae quos odit!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis beatae accusamus quae, inventore quis quibusdam suscipit saepe tenetur cum facilis similique id praesentium ea nisi quasi corporis ducimus eius enim?
+            </p>
+            <div><a href="index.html">Voltar</a></div>
     </main>
 </body>
 </html>
