--- a/exercicios/ex022/index.html
+++ b/exercicios/ex022/index.html
@@ -14,5 +14,6 @@
     <h1><a href="fundo003.html">Acesse o terceiro exemplo de fundo de imagem</a></h1>
 
     <h1><a href="fundo004.html">Acesse o quarto exemplo de fundo de imagem</a></h1>
+    <h1><a href="fundo006.html">Acesse o quinto exemplo de fundo de imagem</a></h1>
 </body>
 </html>
