--- a/exercicios/ex022/index.html
+++ b/exercicios/ex022/index.html
@@ -15,5 +15,7 @@
 
     <h1><a href="fundo004.html">Acesse o quarto exemplo de fundo de imagem</a></h1>
     <h1><a href="fundo006.html">Acesse o quinto exemplo de fundo de imagem</a></h1>
+    <h1><a href="fundo007.html">Acesse o sexto exemplo de fundo de imagem</a></h1>
+    
 </body>
 </html>
