--- a/desafios/desafio-cordel/index.html
+++ b/desafios/desafio-cordel/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>CORDEL MODERNO</h1>
+        <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="author">Milton Duarte</a></p>
     </header>
     <main>
@@ -24,20 +24,20 @@
     Antes que eu caduque
     Vou dizer tudo em poesia.
 
-</pre>
+    </pre>
         </section>
         <section class="foto1">
 
     <pre><div>Não é mais como era antes
-É tudo abreviado
-"Você" só tem duas letras
-O "O" e o "E" foi riscado
-Para declarar o amor
-Basta botar uma flor
-E um coração desenhado.</div></pre>                
+        É tudo abreviado
+        "Você" só tem duas letras
+        O "O" e o "E" foi riscado
+        Para declarar o amor
+        Basta botar uma flor
+        E um coração desenhado.</div></pre>                
+        
         </section>
         <section>
-
     <pre>
 
         Arroba agora não pesa
@@ -56,19 +56,19 @@ E um coração desenhado.</div></pre>
         Decifre esse rabisco.
         Tem símbolo para tudo
 
-</pre>
-</section>
-<section class="foto2">
-    <pre><div>Tenho saudade das cartas
-Escritas com a própria mão
-Mandava no mês de Junho
-Só chegava no Verão
-Mas matava a saudade
-Era texto de verdade
-Nas linhas do coração.</div></pre>
-</section>
-<section>
-    <pre>
+    </section>
+    <section class="foto2">
+        <pre><div>Tenho saudade das cartas
+            Escritas com a própria mão
+            Mandava no mês de Junho
+            Só chegava no Verão
+            Mas matava a saudade
+            Era texto de verdade
+            Nas linhas do coração.</div></pre>
+        </section>
+        <section>
+            <pre>
+    </pre>
 
         Chegando na mesma hora
         Mas quando vou prosear
@@ -86,10 +86,10 @@ Nas linhas do coração.</div></pre>
         Deixe que Deus interprete.
         Agora, escrevo e envio
     </pre>
-</section>
-    </main>
     <footer>
-        <p>Site criado por <a target="_blank" rel="author" href="https://github.com/leonardowkr">Leonardo Wecker</a>, exercício do <a target="_blank" href="youtube.com/cursoemvideo">CursoemVídeo</a></p>
+    </section>
+    <p>Site criado por <a target="_blank" rel="author" href="https://github.com/leonardowkr">Leonardo Wecker</a>, exercício do <a target="_blank" href="youtube.com/cursoemvideo">CursoemVídeo</a></p>
     </footer>
+    </main>
 </body>
 </html>
