--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        hello word</h1>
+    <h1>Minha primeira tabela</h1>
+    <table>
+        
+    </table>
 </body>
 </html>
