ajustes desafio astronauta

--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -10,9 +10,10 @@
             margin: 0px;
         }
         main{
-            background: black url(espaco.jpg) repeat-y fixed center center;
+            background: black url(espaco.jpg) no-repeat top center;
             background-size: cover;
-            height: 200vh;
+            height: 100vh;
+            width: 100vw;
         }
         div{
             background: url(astronauta.png) no-repeat fixed center center;
