--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -10,13 +10,12 @@
             margin: 0px;
         }
         main{
-            background: black url(espaco.jpg) no-repeat top center;
+            background: black url(espaco.jpg) fixed no-repeat top center;
             background-size: cover;
-            height: 100vh;
-            width: 100vw;
+            height: 200vh;
         }
         div{
-            background: url(astronauta.png) no-repeat fixed center center;
+            background: url(astronauta.png) fixed no-repeat center center;
             background-size: contain;
             width: 50vw;
             height: 50vh;
