--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -12,7 +12,11 @@
         <input type="text" name="nome" id="inome"></p>
         <p><label for="isobrenome">Sobrenome:</label>
         <input type="text" name="sobrenome" id="isobrenome"></p>
+        <p><label for="ihora">Hora:</label><input type="time" name="hora" id="ihora"></p>
+        <p><label for="imes">Mês:</label><input type="month" name="mes" id="imes"></p>
+        <p></p>
         <p><input type="submit" value="Enviar"></p>
+        
 
     </form>
 </body>
