--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquery.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<body>
+<body onresize="tamanhoMudou()">
     <header>
         <h1>Meu site </h1>
         <span id="menu" class="material-symbols-outlined" onclick="clicouMenu()">
@@ -38,8 +39,15 @@
         else{
             itens.style.display='block'
         }
-        
     }
+        function tamanhoMudou(){
+            if(window.innerWidth>=768){
+                itens.style.display='block'
+            }
+            else{
+                itens.style.display='none'
+            }
+        }
     </script>
 </body>
 </html>
