--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -53,7 +53,7 @@
         }
         function alteraImagem(){
             document.getElementById("artigo").style.backgroundImage="url('foto.jpg')"
-            document.getElementById("artigo").style.backgroundRepeat="no-repeat"
+            document.getElementById("artigo").style.backgroundRepeat="repeat"
             document.getElementById("artigo").style.backgroundSize="contain"
         }
         function voltaImagem(){
