--- a/desafios/d005/index.html
+++ b/desafios/d005/index.html
@@ -18,13 +18,13 @@
         <h1>Quem sou eu?</h1>
         <div>
             <img
-                class="col-lg-2 col-5"
+                class="col-lg-2 col-md-3 col-4"
                 id="perfil"
                 src="perfil2.jpg"
                 alt="Foto de perfil"
             />
         </div>
-        <p class="col-lg-10 col-10">
+        <p class="col-lg-8 col-8">
             Meu nome é <strong> Leonardo Wecker</strong>, sou formado Técnico em
             Mecatrônica pelo Instituto Federal de Novo Hamburgo, estado do Rio
             Grande do Sul. Depois de formado, agora estou cursando graduação em
@@ -41,7 +41,7 @@
                         target="_blank"
                         href="https://leonardowkr.github.io/javascript/javascript/js-curso-2-aula1/js-curso-2-aula_-/"
                         ><img
-                            class="col-lg-10 col-10"
+                            class="col-lg-8 col-10"
                             src="projeto01.png"
                             alt=""
                     /></a>
@@ -51,7 +51,7 @@
                         target="_blank"
                         href="https://leonardowkr.github.io/programa-html-css/desafios/d010/"
                         ><img
-                            class="col-lg-10 col-10"
+                            class="col-lg-8 col-10"
                             src="projeto03.png"
                             alt=""
                     /></a>
@@ -61,7 +61,7 @@
                         target="_blank"
                         href="https://leonardowkr.github.io/javascript/javascript/3411-praticando-logica-projeto_inicial/amigo-secreto/"
                         ><img
-                            class="col-lg-10 col-10"
+                            class="col-lg-8 col-10"
                             src="projeto02.png"
                             alt=""
                     /></a>
@@ -97,5 +97,24 @@
                 >- Me segue lá no twitter
             </li>
         </ul>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div id="formulario" class="col-lg-7 col-8">
+                        <form>
+                            <div class="form-group">
+                                <label>Nome</label>
+                                <input type="text" class="form-control" placeholder="Insira o nome">
+                            </div>
+                            <div class="form-group">
+                                <label>E-mail</label>
+                                <input type="email" class="form-control" placeholder="Insira o e-mail">
+                            </div>
+                            <button class="btn btn-primary">Cadastrar</button> 
+                        </form>
+                    </div>
+                </div>
+            </div>
+       </section>
     </body>
 </html>
