--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -20,9 +20,9 @@
         <div class="row">
             <div class="col-lg-8 col-md-11 col-sm-12 col-11">
                 <i class="i i-instagram"></i>
-                <h1>Por que não devemos deixar nossa aposentadoria nas mãos do governo e começarmos a investir no nosso futuro</h1>
-                <p>Motivos para não confiar sua aposentadoria inteiramente no governo federal, enquanto o estadual já fez parcelamento de salário de funcionários ativos</p>
-                <p id="creditos">Por <a href="https://leonardowkr.github.io/programa-html-css/desafios/d005/">Leonardo Wecker</a> - Novo Hamburgo
+                <h1>Por que não devemos deixar nossa aposentadoria nas mãos do governo e começar a investir no nosso futuro</h1>
+                <p>Motivos para não confiar sua aposentadoria inteiramente no governo federal, enquanto o estadual já fez parcelamento de salário de funcionários ativos.</p>
+                <p id="creditos">Por <a target="_blank" href="https://leonardowkr.github.io/programa-html-css/desafios/d005/">Leonardo Wecker</a> - Novo Hamburgo
                                 <span>
                                     <a href="https://www.instagram.com/_leoweck/"
                                     rel="author"
@@ -31,6 +31,9 @@
                                     rel="author"
                                     target="_blank"><i class="bi bi-linkedin"></i></a>
                                     <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href="https://github.com/leonardowkr"
+                                    rel="author"
+                                    target="_blank"><i class="bi bi-github"></i></a>
                                 </span>
                 </p>
                 <figure></figure>
@@ -39,33 +42,70 @@
                 </figure>
             </div>
             <div class="col-lg-6 col-11">
-                    <p class="espacamento-paragrafo identacao">Eu começo perguntando a você, caro leitor: provelmente seus pais/avós tiveram mais de 2 irmãos/irmãs, correto? Talvez mais de 5. E agora quantos irmãos você tem hoje?
-                    Então, é altamente provável que você tenha menos irmãos do que seus ascendentes tiveram mais antigamente. E isso é demonstrato através de dados que podemos observar abaixo
+                    <p class="espacamento-paragrafo identacao">Eu começo perguntando a você, caro leitor: provavelmente seus pais/avós tiveram mais de 2 irmãos/irmãs, correto? Talvez mais de 5. E agora quantos irmãos você tem hoje?
+                    Então, é altamente provável que você tenha menos irmãos do que seus ascendentes tiveram mais antigamente. E isso é demonstrado através de dados que podemos observar abaixo
                 </p>
                 
                 <figure>
-                    <img src="imagens/vale-esse-evolucao-piramide-brasil-1-1.gif" class="col-lg-10 col-12" alt="">
+                    <img src="imagens/vale-esse-evolucao-piramide-brasil-1-1.gif" class="col-lg-12 col-12" alt="">
+                    <caption></caption>
+                </figure>
+                
+                <p class="espacamento-paragrafo identacao">
+                    A previdência social ela funciona do seguinte modo super simples: os contribuintes ativos pagam pelos gastos com os beneficiários inativos.
+                    Na época em que a previdência foi instituída funcionava bem. As pessoas não viviam tanto como hoje e também tinham mais filhos por mulher, em média, e, então, fluía relativamente bem. Mas hoje, de lá pra cá, a expectativa de vida aumentou muito - podemos ver que foi mais de 30 anos - e a quantidade de filhos que as pessoas estão tendo está em constante queda ao longo dos anos.
+                </p>
+                <figure></figure>
+                    <img src="imagens/ibge2.png" class="col-lg-12 col-12 espacamento-imagens" alt="">
+                    <caption></caption>
+                </figure>
+
+                <figure>
+                    <img src="imagens/ibge1.png" class="col-lg-12 col-12" alt="">
                     <caption></caption>
                 </figure>
                 <p class="espacamento-paragrafo identacao">
-                    A previdência social ela funciona do seguinte modo super simples: os contribuintes ativos pagam pelos gastos com os beneficiários inativos.
-                    Na época em que a previdência foi instituída funcionava bem. As pessoas não viviam tanto como hoje e tá tudo certo. Mas hoje, de lá pra cá, a expectativa de vida aumentou muito, podemos ver que foi mais de 30 anos.
+                Outro dado importante é a proporsão de idosos (beneficiários da previdência) e a população total (contribuintes), em que se olharmos o gráficos podemos observar que há um crescimento elevado nessa proporção. Considerando que para que uma pessoa se aposente é necessário que mais que uma seja contribuinte desse sistema, é uma informação muito relevante nesse cenário já considerado grave para as contas públicas.
+                </p>
+                <figure></figure>
+                    <img src="imagens/governo2.png" class="col-lg-12 col-12" alt="">
+                    <caption></caption>
+                </figure>
+                <p class="espacamento-paragrafo identacao">
+                Resultado disso? Déficit. Ou seja, o governo gasta mais com os benefícios do que recebe de contribuições. E a tendência é claramente de aumento significativo, como mostra o gráfico abaixo, apesar da recente reforma da previdência ter sido promulgada em 2020. 
                 </p>
                 <figure>
-                    <img src="imagens/ibge1.png" class="col-lg-10 col-12" alt="">
+                    <img src="imagens/governo3.png" class="col-lg-12 col-12" alt="">
                     <caption></caption>
                 </figure>
-                Resultado disso? Déficit. Ou seja, o governo gasta mais com os benefícios do que recebe de contribuições. E a tendência é claramente de aumento significativo, apesar da recente reforma da previdência ter sido promulgada em 2020. 
-                <figure>
-                    <img src="imagens/governo3.png" class="col-lg-10 col-12" alt="">
-                    <caption></caption>
-                </figure>
+                <p class="espacamento-paragrafo identacao">
                 E vamos falar a seguinte situação: você passa 30/35 anos contribuindo para o governo, e quando, finalmente, tá na idade de se aposentar o governo aumenta a idade para se aposentar em mais  5/10 anos, ou até mesmo parcelar o pagamento como já aconteceu a servidores do ativos aqui do Estado, lembram?
+                </p>
+                <figure></figure>
+                    <img src="imagens/governo4.png" class="col-lg-12 col-12" alt="">
+                    <caption></caption>
+                </figure>
+                <p class="espacamento-paragrafo identacao">
                 Ou seja, eu não confiaria a minha sobrevivência inteiramente no governo, nem ferrando.
-                Por não confiar a minha renda em 100% no governo, eu aconselho a todos a começarem a investir. Mas a investir de forma racional, de acordo com seu perfil de investir – se é mais conservador ou mais arrojado – e não caindo em esquemas de pirâmide prometendo 1% ao dia de forma garantida e nem com daytrade, em que 99% dos casos as pessoas perdem dinheiro. Mas sim em investimentos em tesouro direto, boas ações brasileiras ou estrangeiras, fundos imobiliários, etf’s, etc..
+                Por não confiar a minha renda em 100% no governo, eu aconselho a todos a começarem a investir.
+                </p>
+                <figure></figure>
+                    <img src="imagens/investidor1.png" class="col-lg-12 col-12" alt="">
+                    <caption></caption>
+                </figure>
+                <p class="espacamento-paragrafo identacao">
+                Mas a investir de forma racional, de acordo com seu perfil de investidor – de conservador a arrojado – e não caindo em esquemas de pirâmide prometendo 1% ao dia de forma garantida e com daytrade, em que 99% dos casos as pessoas perdem dinheiro. Mas sim em investimentos em tesouro direto, boas ações brasileiras ou estrangeiras, fundos imobiliários, ETF’s(fundos de índice), entre outros.
+                </p>
+                <figure></figure>
+                    <img src="imagens/investidor2.png" class="col-lg-12 col-12 espacamento-imagens" alt="">
+                    <caption></caption>
+                </figure>
             </div>
         </div>
     </div>
-
+<footer>
+    <h1>EP: sua última notícia.</h1>
+    <p id="creditos"><a target="_blank" href="https://leonardowkr.github.io/programa-html-css/desafios/d005/">Leonardo Wecker</a></p>
+</footer>
 </body>
 </html>
